--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="css/style.css">
-	<meta charset="UTF-8">
-	<title>Home</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<header>
-		<nav>
-				<ul>
-				<li><a href = "index.html">About</a></li>
-				<li><a href= "family.html">Family</a></li>
-			    </ul>
-		</nav>
-	</header>
-<main>
-<h1>Colleen van Lent</h1>
-<p>I am a Lecturer IV in the School of Information at the <a href = "https://umich.edu">University of Michigan</a>. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-<p>My previous jobs include Associate Professor at California State University and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from Kent State University Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
-</main>
-<footer>
-Colleen van Lent &copy; 2020
-</footer>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>4 Uno Rules You're Playing Wrong</title>
+    <!-- Add link to two style sheets here. -->
+  </head>
+  <body>
+    <header>
+      <h1>4 Uno Rules You're Playing Wrong</h1>
+      <img src="images/uno-cards.jpg" alt="uno cards" />
+    </header>
+    <main>
+      <div id="intro">
+      <h2>Say what?</h2>
+      <p>The popular American card game Uno has simple rules, right? Wrong! Here are some rules you're probably playing incorrectly.</p>
+      </div>
+
+      <div id="red">
+        <h2>If you don't have a card to play, you only have to pick up one card</h2>
+        <p>You don't have to keep drawing cards until you get one that matches the discard pile, and you can even play it right away!</p>
+      </div>
+
+      <div id="blue">
+        <h2>You can't stack or chain cards</h2>
+        <p>Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>
+      </div>
+
+      <div id="yellow">
+        <h2>You can win with an action card</h2>
+        <p>Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>
+      </div>
+
+      <div id="green">
+        <h2>In two player mode Reverse is treated as a Skip</h2>
+        <p>The other player's turn is skipped and you can play again right away. Same with draw cards!</p>
+      </div>
+    </main>
+    <footer>
+      <p>University of Michigan School of Information <br/>
+        &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
+    </footer>
+  </body>
 </html>
