--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Andika&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="images/pigeon-icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://cdn.onlinewebfonts.com/svg/img_75878.png"/>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Andika">
 
